<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/red_400"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/play_store_512" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/general_menu"
            android:textColor="@color/black_white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/itemLayoutSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:adjustViewBounds="true"
                        android:padding="10dp"
                        android:src="@drawable/layout"
                        app:tint="@color/black_white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="Homepage Layout"
                        android:textColor="@color/black_white"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageButton
                            android:id="@+id/layout_grid"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:adjustViewBounds="true"
                            android:padding="10dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/grid"
                            app:tint="@color/black_white" />
                        <ImageButton
                            android:id="@+id/layout_Linear"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:scaleType="centerInside"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:adjustViewBounds="true"
                            android:padding="10dp"
                            android:src="@drawable/list"
                            app:tint="@color/black_white" />
                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/itemAboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:adjustViewBounds="true"
                        android:padding="10dp"
                        android:src="@drawable/about"
                        app:tint="@color/black_white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/about_us"
                        android:textColor="@color/black_white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:adjustViewBounds="true"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                        app:tint="@color/black_white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/itemContactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:adjustViewBounds="true"
                        android:padding="10dp"
                        android:src="@drawable/contact"
                        app:tint="@color/black_white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/contact_us"
                        android:textColor="@color/black_white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:adjustViewBounds="true"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                        app:tint="@color/black_white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/itemPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:adjustViewBounds="true"
                        android:padding="10dp"
                        android:src="@drawable/privacy"
                        app:tint="@color/black_white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/black_white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:adjustViewBounds="true"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                        app:tint="@color/black_white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_menu"
            android:textColor="@color/black_white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/itemRateUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:adjustViewBounds="true"
                        android:padding="10dp"
                        android:src="@drawable/rating"
                        app:tint="@color/black_white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/rating"
                        android:textColor="@color/black_white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:adjustViewBounds="true"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                        app:tint="@color/black_white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/itemMoreApps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:adjustViewBounds="true"
                        android:padding="10dp"
                        android:src="@drawable/more"
                        app:tint="@color/black_white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/more_apps"
                        android:textColor="@color/black_white"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:adjustViewBounds="true"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                        app:tint="@color/black_white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>