<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar_color"
            android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="?homeAsUpIndicator"
            app:menu="@menu/post_details_toolbar_menu"
            app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/lyt_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:id="@+id/lyt_secondary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/red" />



            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="17dp"
                android:textColor="@color/black_white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="17dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_date"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/calendar"
                        app:tint="@color/black_white" />

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="6dp"
                        android:layout_toEndOf="@+id/img_date"
                        android:textColor="@color/black_white"
                        tools:text="12-02-2018" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/lyt_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="?android:attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/img_comment"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/comment"
                        app:tint="@color/black_white" />

                    <TextView
                        android:id="@+id/comment_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="6dp"
                        android:layout_toEndOf="@+id/img_comment"
                        android:textColor="@color/black_white"
                        android:textStyle="bold"
                        tools:text="3" />

                </RelativeLayout>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="17dp"
                android:layout_marginTop="8dp"
                android:background="@color/pink" />

            <com.google.android.gms.ads.AdView
                android:visibility="gone"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewInPostDetailsTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="LARGE_BANNER"
                ads:adUnitId="@string/banner_ads_id" />

            <WebView
                android:id="@+id/web_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp" />

            <com.google.android.gms.ads.AdView
                android:visibility="gone"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewInPostDetailsBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                ads:adSize="MEDIUM_RECTANGLE"
                ads:adUnitId="@string/banner_ads_id">
            </com.google.android.gms.ads.AdView>
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_url="https://assets8.lottiefiles.com/packages/lf20_x62chJ.json" />

            <TextView
                android:id="@+id/tv_related"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black_white"
                android:layout_marginTop="6dp"
                android:text="@string/related_posts"/>

            <androidx.recyclerview.widget.RecyclerView
                android:clipToPadding="false"
                android:padding="10dp"
                android:id="@+id/rvRelated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="70dp"
        app:srcCompat="@drawable/comment"
        android:contentDescription="viewComments"
        android:focusable="true" />


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewInPostDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ads_id">
    </com.google.android.gms.ads.AdView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>